# ssim-python

./: LICENSE  pyproject.toml  run.py  setup.py
ssim_python/: __init__.py
ssim_python/lib/: lib_cython_0.pyx  lib_cython_1.pyx  lib_cython_2.pyx  libcpp.cpp  setup.py  setup_cpp.py  setup_cython.py
tests/: test_cpu.py  test_gpu.py
