[tool.poetry]
name = "ssim-python"
version = "0.1.0"
description = ""
authors = ["yamamura-k <yamayama23bb@gmail.com>"]
readme = "README.md"
packages = [{include = "ssim_python"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.0"
numpy = "^1.26.4"
cython = "^3.0.10"
pytorch-memlab = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
jupyter = "^1.0.0"
notebook = "^7.2.0"
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
